--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "weekly-log",
   "version": "0.12.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "description": "This plugin generates a templated weekly note, with shared todos",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
